# Hourai

./: .dockerignore  .gitignore  App.config  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  DrumBot.csproj  DrumBot.csproj.DotSettings  DrumBot.sln  DrumBotCore.xproj  Hourai.csproj  Hourai.sln  LICENSE  Makefile  README.md  appsettings.json  config.example.json  config.json  docker-compose-example.yml  docker-compose.example.yml  hourai.service  launcher.py  packages.config  project.json  requirements.txt  schema.psql
.github/: PULL_REQUEST_TEMPLATE.md
Migrations/: 20160918211946_InitialMigration.Designer.cs  20160918211946_InitialMigration.cs  20161009054423_TempBanMigration.Designer.cs  20161009054423_TempBanMigration.cs  20161010050445_TempActionMigration.Designer.cs  20161010050445_TempActionMigration.cs  20161029002723_PrefixMigration.Designer.cs  20161029002723_PrefixMigration.cs  20161103062346_VoiceMigration.Designer.cs  20161103062346_VoiceMigration.cs  20170208045234_RedditMigration.Designer.cs  20170208045234_RedditMigration.cs  20170208054428_RedditTime.Designer.cs  20170208054428_RedditTime.cs  20170215235232_StreamUpdate.Designer.cs  20170215235232_StreamUpdate.cs  20170226015017_Test.Designer.cs  20170226015017_Test.cs  20170228035938_Initial.cs  20170228235645_TempFix.Designer.cs  20170305053248_MoreTemp.Designer.cs  20170307060445_CustomConfig.Designer.cs  20170307060445_CustomConfig.cs  BotDbContextModelSnapshot.cs
Properties/: AssemblyInfo.cs
base/: Dockerfile  launcher.py  requirements.txt
config/: config_template.env  hourai.example.jsonnet
config-example/: andesite.conf  commands.jsonnet  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  hourai.jsonnet  lavalink.yml  nginx.dev.conf  nginx.prod.conf  prometheus.yml
crates/hourai-logger/: Cargo.toml  Dockerfile
crates/hourai-logger/src/: announcements.rs  auto.rs  buttons.rs  listings.rs  main.rs  member_chunker.rs  message_filter.rs  message_logging.rs  pending_events.rs  roles.rs
crates/hourai-logger/src/commands/: admin.rs  config.rs  escalation.rs  mod.rs  prelude.rs  standard.rs  verification.rs
crates/hourai-logger/src/verification/: approvers.rs  buttons.rs  context.rs  mod.rs  rejectors.rs  verifier.rs
crates/hourai-logger/src/web/: guild_config.rs  mod.rs  oauth.rs  prelude.rs  status.rs
crates/storage/sql/: Cargo.toml
crates/storage/sql/migrations/: 20260718000000_initial_schema.sql
crates/storage/sql/src/: lib.rs  models.rs  protobuf.rs  types.rs  whois.rs
crates/storage/sql/tests/: migrations.rs
docs/: Actions.md  Commands.md  Getting-Started.md  README.md  Validation.md  _sidebar.md  index.html
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vue.config.js
hourai/: actions.py  bot.py  cogs.py  config.py  context.py  launcher.py  util.py
logger/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.logger  Dockerfile.music  Dockerfile.validation  build.rs
logger/hourai/: Cargo.toml  build.rs
logger/hourai-feeds/: Cargo.toml  Dockerfile
logger/hourai-feeds/src/: main.rs  models.rs
logger/hourai-feeds/src/reddit/: auth.rs  mod.rs  models.rs  rate_limiter.rs
logger/hourai-frontend/: Trunk.toml  index.scss
logger/hourai-frontend/src/pages/: landing_page.rs
logger/hourai-logger/: Cargo.toml  Dockerfile
logger/hourai-logger/src/: announcements.rs  buttons.rs  commands.rs  listings.rs  main.rs  member_chunker.rs  message_filter.rs  message_logging.rs  pending_actions.rs  pending_events.rs  roles.rs  utils.rs
logger/hourai-logger/src/commands/: admin.rs  config.rs  context.rs  escalation.rs  mod.rs  prelude.rs  standard.rs
logger/hourai-music/: Cargo.toml  Dockerfile
logger/hourai-music/src/: buttons.rs  commands.rs  interaction_ui.rs  interactions.rs  main.rs  player.rs  prelude.rs  queue.rs  track.rs  ui.rs
logger/hourai-validation/: Cargo.toml  Dockerfile
logger/hourai-validation/src/: approvers.rs  context.rs  lib.rs  rejectors.rs
logger/hourai-verification/: Cargo.toml  Dockerfile
logger/hourai-verification/src/: approvers.rs  context.rs  main.rs  rejectors.rs  verifier.rs
logger/hourai-web/: Cargo.toml  Dockerfile
logger/hourai-web/src/: guild_config.rs  logger.rs  main.rs  oauth.rs  prelude.rs  status.rs
logger/hourai/src/: config.rs  error.rs  init.rs  interactions.rs  lib.rs  prelude.rs
logger/hourai/src/cache/: builder.rs  config.rs  mod.rs  updates.rs
logger/hourai/src/cache/model/: channel.rs  guild.rs  mod.rs  role.rs
logger/hourai/src/commands/: mod.rs  precondition.rs  prelude.rs
logger/hourai/src/db/: mod.rs  models.rs
logger/hourai/src/db/cache/: compression.rs
logger/hourai/src/interactions/: commands.rs  components.rs  mod.rs
logger/hourai/src/models/: message.rs  mod.rs  user.rs
logger/hourai/src/util/: mentions.rs  mod.rs  whois.rs
logger/src/: config.rs  embed.rs  error.rs  init.rs  lib.rs  main.rs  prelude.rs
logger/src/cache/: mod.rs  updates.rs
logger/src/cache/model/: mod.rs  voice_state.rs
logger/src/commands/: mod.rs  mods.rs  precondition.rs
logger/src/db/: cache.rs  mod.rs  models.rs
logger/src/db/cache/: guild_config.rs  mod.rs  protobuf.rs
logger/src/hourai/: mod.rs
logger/src/hourai/bot/: background_job.rs  event_handler.rs  mod.rs  utils.rs
logger/src/hourai/bot/cache/: mod.rs
logger/src/hourai/bot/cache/model/: guild.rs  mod.rs
logger/src/hourai/db/: cache.rs  mod.rs  models.rs
logger/src/logger/: mod.rs
logger/src/models/: message.rs  mod.rs  user.rs
logger/src/music/: mod.rs  state.rs
logger/src/validation/: approvers.rs  context.rs  mod.rs  rejectors.rs
logger/storage/common/: Cargo.toml
logger/storage/common/src/: actions.rs  escalation.rs  lib.rs  storage.rs
logger/storage/redis/: Cargo.toml
logger/storage/redis/src/: compression.rs  guild_config.rs  keys.rs  lib.rs  modlog.rs  protobuf.rs
logger/storage/sql/: Cargo.toml
logger/storage/sql/src/: actions.rs  lib.rs  models.rs  types.rs  whois.rs
proto/: action.proto  guild_configs.proto
src/: Bot.cs  (+25 more)
(+559 files in other folders)
