[workspace]
members = [
  "logger/hourai",
  "logger/hourai-feeds",
  #"hourai-frontend",
  "logger/hourai-logger",
  "logger/hourai-music",
  "logger/hourai-verification",
  "logger/hourai-web",
  "logger/storage/common",
  "logger/storage/sql",
  "logger/storage/redis",
]

[profile.release]
opt-level = 3
lto = "thin"
