[workspace]
members = [
  "logger/hourai",
  "logger/hourai-feeds",
  # "logger/hourai-frontend",
  "logger/hourai-logger",
  "logger/hourai-music",
  "logger/hourai-verification",
  "logger/hourai-web",
  "logger/storage/common",
  "logger/storage/sql",
  "logger/storage/redis",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
