[workspace]
resolver = "2"
members = [
  "crates/hourai",
  "crates/hourai-logger",
  "crates/storage/common",
  "crates/storage/sql",
  "crates/storage/redis",
]

[workspace.lints.rust]
elided_lifetimes_in_paths = "allow"
non_local_definitions = "allow"
dead_code = "allow"

[profile.release]
opt-level = 3
lto = "thin"
