[package]
name = "hourai"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[[bin]]
name = "hourai"
path =  "src/main.rs"
test = false
bench = false

[build-dependencies]
walkdir = "2.3.1"
protobuf-codegen-pure = "2.18.0"

[profile.release]
opt-level = 3
lto = true

[dependencies]
async-trait = "0.1.42"
byteorder = "1.4.2"
flate2 = "1.0.20"
futures = "0.3.12"
mobc = "0.7.0"
mobc-redis = "0.7.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
protobuf = "2.22.0"
serde = "1.0.123"
serde_json = "1.0.62"
rand = "0.8.3"
thiserror = "1.0"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
twilight-cache-inmemory = "0.3.1"
twilight-model = "0.3.1"
twilight-standby = "0.3.0"
# Avoid breaking change
funty = "=1.1.0"

[dependencies.tokio]
default-features = false
version = "1.0"
features = ["macros", "rt"]

[dependencies.twilight-gateway]
default-features = true
version = "0.3.1"
features = ['simd-json', 'rustls']

[dependencies.twilight-http]
default-features = true
version = "0.3.1"
features = ['simd-json', 'rustls']

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros"]
version = "0.5.1"
