[package]
name = "hourai"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[features]
default = ["logger", "music"]
logger = []
music = ["base64", "hyper", "http", "twilight-lavalink", "twilight-command-parser"]

[[bin]]
name = "hourai-logger"
path = "src/bin/hourai-logger/main.rs"
test = true
required-features = ["logger"]

[[bin]]
name = "hourai-music"
path = "src/bin/hourai-music/main.rs"
test = true
required-features = ["music"]

[build-dependencies]
walkdir = "2.3.1"
protobuf-codegen-pure = "2.18.0"

[profile.release]
opt-level = 3
lto = true

[dependencies]
async-trait = "0.1.42"
bitflags = { default-features = false, version = "1" }
byteorder = "1.4.2"
dashmap = { default-features = false, version = "4.0" }
flate2 = "1.0.20"
futures = { default-features = false, version = "0.3.12" }
redis = { version = "0.20", features = ["aio", "tokio-comp", "connection-manager"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
protobuf = "2.22.0"
rand = "0.8.3"
serde = "1.0.123"
serde_json = "1.0.62"
anyhow = "1.0.38"
thiserror = "1.0"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
tracing-subscriber = "0.2.15"
twilight-model = "0.3.1"
# Avoid breaking change
funty = "=1.1.0"
# Feature based optional dependencies
hyper = { features = ["client", "http2", "runtime"], version = "0.14", optional = true }
twilight-lavalink = { version = "0.3", optional = true }
twilight-command-parser = { version = "0.3", optional = true }
base64 = { version = "0.13", optional = true }
http = { default-features = false, optional = true, version = "0.2" }

[dependencies.tokio]
default-features = false
version = "1.0"
features = ["macros", "rt"]

[dependencies.twilight-gateway]
default-features = true
version = "0.3.1"
features = ['simd-json', 'rustls']

[dependencies.twilight-http]
default-features = true
version = "0.3.1"
features = ['simd-json', 'rustls']

[dependencies.simd-json]
default-features = true
version = "0.3"
features = ['allow-non-simd']

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros"]
version = "0.5.1"
