[workspace]
members = [
  "hourai",
  "hourai-feeds",
  "hourai-logger",
  "hourai-music",
  "hourai-verification",
  "hourai-web",
  "storage/common",
  "storage/sql",
  "storage/redis",
]

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
twilight-model = { git = "https://github.com/james7132/twilight", branch = 'lavalink-playlist' }
twilight-http = { git = "https://github.com/james7132/twilight", branch = 'lavalink-playlist' }
twilight-gateway = { git = "https://github.com/james7132/twilight", branch = 'lavalink-playlist' }
twilight-lavalink = { git = "https://github.com/james7132/twilight", branch = 'lavalink-playlist' }
