[package]
name = "hourai-feeds"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
hourai = { path = "../hourai" }
hourai-sql = { path = "../storage/sql" }
anyhow = "1.0"
futures = "0.3"
http = { default-features = false, version = "0.2" }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
twilight-embed-builder = "0.5"

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros"]
version = "0.5.1"

[dependencies.tokio]
default-features = false
version = "1.0"
features = ["macros", "rt"]

[dependencies.simd-json]
default-features = true
version = "0.3"
features = ['allow-non-simd']
