[package]
name = "hourai-logger"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
hourai = { path = "../hourai" }
hourai-storage = { path = "../storage/common" }
hourai-sql = { path = "../storage/sql" }
hourai-redis = { path = "../storage/redis" }
anyhow = "1.0"
chrono = "0.4"
futures = { default-features = false, version = "0.3" }
lazy_static = "1.4"
rand = "0.8"
regex = "1.5"
serde_json = "1.0"
thiserror = "1.0"
humantime = "2.1"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
twilight-embed-builder = "0.7"

[dependencies.tokio]
default-features = false
version = "1.0"
features = ["macros", "rt-multi-thread", "time"]

[dependencies.reqwest]
default-features = false
version = "0.11"
features = ["json", "rustls-tls-webpki-roots"]
