[package]
name = "hourai-music"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
hourai = { path = "../hourai" }
hourai-redis = { path = "../storage/redis" }
anyhow = "1.0"
async-trait = "0.1.42"
base64 = "0.13"
dashmap = { default-features = false, version = "4.0" }
futures = { default-features = false, version = "0.3.12" }
http = { default-features = false, version = "0.2" }
hyper = { features = ["client", "http2", "runtime"], version = "0.14" }
rand = "0.8"
serde_json = "1.0.62"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
twilight-command-parser = "0.3"
twilight-lavalink = "0.3"
twilight-embed-builder = "0.3"

[dependencies.tokio]
default-features = false
version = "1.0"
features = ["macros", "rt"]
