[package]
name = "hourai-validation"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
hourai = { path = "../hourai" }
hourai-sql = { path = "../storage/sql" }
anyhow = "1.0"
async-trait = "0.1.42"
humantime = "2.1"
regex = "1.4"
chrono = "0.4"
dashmap = { default-features = false, version = "4.0" }
lazy_static = "1.4"
