[package]
name = "hourai-web"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
hourai = { path = "../hourai" }
hourai-sql = { path = "../storage/sql" }
hourai-redis = { path = "../storage/redis" }
actix-web = "3.3"
protobuf = "2.22"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }

[dependencies.redis]
version = "0.20"
features = ["aio", "tokio-comp", "connection-manager"]

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"]
version = "0.5.1"
