[package]
name = "hourai-web"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[dependencies]
hourai = { path = "../hourai" }
hourai-sql = { path = "../storage/sql" }
hourai-redis = { path = "../storage/redis" }
actix-web = { version = "4.0.0-beta.9", features = ["cookies"] }
cookie = "0.15"
protobuf = "2.22"
awc = { version = "3.0.0-beta.8", features = ["rustls"] }
futures = { default-features = false, version = "0.3.12" }
tracing-futures = "0.2"
uuid = { version = "0.8", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
time = "0.2"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }

[dependencies.redis]
version = "0.20"
features = ["aio", "tokio-comp", "connection-manager"]

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"]
version = "0.5.1"
