[package]
name = "hourai"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[build-dependencies]
walkdir = "2.3.1"
protobuf-codegen-pure = "2.22.0"

[dependencies]
anyhow = "1.0.38"
bitflags = { default-features = false, version = "1" }
chrono = "0.4"
dashmap = { default-features = false, version = "4.0" }
metrics-exporter-prometheus = "0.3"
protobuf = "2.22"
serde = "1.0"
thiserror = "1.0"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
tracing-subscriber = "0.2.15"
twilight-model = "0.3"
# Avoid breaking change
funty = "=1.1.0"
# Feature based optional dependencies
twilight-command-parser = "0.3"

[dependencies.twilight-gateway]
default-features = true
version = "0.3.1"
features = ['simd-json', 'rustls', 'metrics']

[dependencies.twilight-http]
default-features = true
version = "0.3.1"
features = ['simd-json', 'rustls']

[dependencies.simd-json]
default-features = true
version = "0.3"
features = ['allow-non-simd']

[dev-dependencies]
static_assertions = "1.1.0"
