[package]
name = "hourai"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[build-dependencies]
walkdir = "2.3.1"
protobuf-codegen-pure = "2.27"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1"
base64 = "0.13"
bitflags = { default-features = false, version = "1" }
chrono = "0.4"
dashmap = { default-features = false, version = "5.2" }
metrics-exporter-prometheus = "0.10"
protobuf = "2.27"
serde = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
hyper = { version = "0.14", features = ["client"] }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
twilight-model = "0.14"
twilight-util = { version = "0.14", features = ["snowflake", "builder"] }
regex = "1.5"

[dependencies.twilight-gateway]
version = "0.14"
default-features = true
features = ['simd-json', 'rustls-webpki-roots', 'metrics']

[dependencies.twilight-http]
version = "0.14"
default-features = true
features = ['simd-json', 'rustls-webpki-roots']

[dependencies.simd-json]
default-features = true
version = "0.5"
features = ['allow-non-simd']

[dev-dependencies]
static_assertions = "1.1.0"
