[package]
name = "hourai-sql"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2024"

[lints]
workspace = true

[dependencies]
hourai = { path = "../../hourai" }
anyhow = "1.0"
chrono = "0.4"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
protobuf = "2.22"
twilight-util = { version = "0.16", features = ["snowflake", "builder"] }

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "migrate"]
version = "0.6"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
