[package]
name = "hourai-storage"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"

[dependencies]
hourai = { path = "../../hourai" }
hourai-redis = { path = "../redis" }
hourai-sql = { path = "../sql" }
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
delegate = "0.6"
either = "1.6"
futures = { default-features = false, version = "0.3" }
sqlx-core = "0.5"
thiserror = "1.0"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
