[package]
name = "hourai-sql"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"

[dependencies]
hourai = { path = "../../hourai" }
anyhow = "1.0"
chrono = "0.4"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
protobuf = "2.22"
twilight-util = { version = "0.10", features = ["builder"] }

[dependencies.sqlx]
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"]
version = "0.5.9"
